[package]
name = "rabbit"
version = "0.9.0"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/rabbit"
homepage = "https://github.com/cssivision/rabbit"
description = "personal vpn in rust."
readme = "README.md"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
getopts = "0.2"
rand = "0.8"
md5 = "0.7"
slings = "0.3"
dns-resolver = "0.2"
aes = "0.7"
cfb-mode = "0.7"
chacha20 = "0.7"
ctr = "0.7"
cipher = "0.3"
once_cell = "1.19"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
pin-project-lite = "0.2"
futures-channel = "0.3"
