[package]
name = "rabbit"
version = "0.9.0"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/rabbit"
homepage = "https://github.com/cssivision/rabbit"
description = "personal VPN in rust."
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
libc = "0.2"
env_logger = "0.11"
getopts = "0.2"
rand = "0.9"
md5 = "0.8"
awak = "0.2"
dns-resolver = { version = "0.2", default-features = false, features = ["awak-runtime"] }
aes = "0.8"
socket2 = { version = "0.6", features = ["all"] }
cfb-mode = "0.8"
chacha20 = "0.9"
ctr = "0.9"
cipher = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
pin-project-lite = "0.2"
futures-channel = "0.3"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha1 = "0.10"
